<resources>
    <string name="app_name">Practica5F</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="registro_de_usuario">Registro de Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="ingrese_su_correo_electronico">Ingrese su correo electrónico</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="ingrese_su_nombre_de_usuario">Ingrese su nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="ya_tienes_una_cuenta_inicia_sesi_n">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="inicio_de_sesi_n">Inicio de Sesión</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="no_tienes_una_centa_reg_strate">¿No tienes una centa? Regístrate</string>
    <string name="desarrolladores">Desarrolladores</string>
    <string name="library">Library</string>
</resources>