<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/pagebkg"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/lavender_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_title"
                android:text="@string/inicio_de_sesi_n"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple_500"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_de_usuario"
                android:textSize="18sp"
                android:textColor="@color/purple_700"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_username"
                android:background="@drawable/lavender_border"
                android:padding="12dp"
                android:textColor="@color/grey"
                android:textColorHint="@color/grey"
                android:hint="@string/ingrese_su_nombre_de_usuario"
                android:drawableStart="@drawable/baseline_person_pin_24"
                android:textSize="16sp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrase_a"
                android:textSize="18sp"
                android:textColor="@color/purple_700"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_password"
                android:background="@drawable/lavender_border"
                android:padding="12dp"
                android:textColor="@color/grey"
                android:textColorHint="@color/grey"
                android:hint="@string/ingrese_su_contrase_a"
                android:drawableStart="@drawable/baseline_lock_24"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:layout_marginBottom="25dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/login_button"
                android:text="@string/iniciar_sesi_n"
                android:textSize="18sp"
                android:backgroundTint="@color/lavender"
                app:cornerRadius="20dp"/>

            <TextView
                android:id="@+id/signupRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_tienes_una_centa_reg_strate"
                android:layout_gravity="center"
                android:padding="8dp"
                android:textSize="16sp"
                android:textColor="@color/purple_700"
                android:layout_marginTop="18dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>